tests/miniJava/neg/000100_mutation.MiniJava
class java { public false static void Main ( String [ ] java ) { { } } }
